# wasmtime

./: Cargo.toml  print.html  searchindex.js  searchindex.json
api/: search-index.js
api/clif_util/: enum.Commands.html  struct.CompiledWithoutSupportOptions.html  struct.PassOptions.html  struct.TestOptions.html
api/clif_util/cat/: struct.Options.html
api/clif_util/compile/: struct.Options.html
api/clif_util/interpret/: struct.Options.html
api/clif_util/print_cfg/: struct.Options.html
api/clif_util/run/: struct.Options.html
api/clif_util/wasm/: struct.Options.html
api/component_macro_test/: all.html  attr.add_variants.html  index.html  sidebar-items.js
api/cranelift/prelude/: struct.Ieee32.html  struct.Ieee64.html
api/cranelift_codegen/: constant.VERSION.html
api/cranelift_codegen/ir/immediates/: index.html  struct.Ieee32.html  struct.Ieee64.html  trait.IntoBytes.html
api/cranelift_interpreter/state/: enum.MemoryError.html
api/cranelift_interpreter/step/: enum.ControlFlow.html  enum.CraneliftTrap.html  enum.StepError.html  fn.step.html  index.html
api/cranelift_interpreter/value/: enum.ValueConversionKind.html  enum.ValueError.html  enum.ValueTypeClass.html  index.html  trait.Value.html
api/src/component_macro_test/: lib.rs.html
api/src/cranelift_codegen/: write.rs.html
api/src/cranelift_codegen/ir/: immediates.rs.html
api/src/cranelift_codegen/isa/aarch64/: lower_inst.rs.html
api/src/cranelift_interpreter/: step.rs.html  value.rs.html
api/src/wasmtime_component_macro/: lib.rs.html
api/src/wasmtime_fuzzing/: oracles.rs.html
api/wasmtime_component_macro/: all.html  derive.ComponentType.html  derive.Lift.html  derive.Lower.html  index.html  sidebar-items.js
api/wasmtime_fuzzing/oracles/: fn.differential_spec_execution.html  fn.differential_wasmi_execution.html  index.html
cranelift/codegen/: Cargo.toml
cranelift/entity/: Cargo.toml
cranelift/frontend/: Cargo.toml
cranelift/module/: Cargo.toml
cranelift/wasm/: Cargo.toml
crates/c-api/: Cargo.toml
crates/cache/: Cargo.toml
crates/cranelift/: Cargo.toml
crates/environ/: Cargo.toml
crates/environ/src/: address_map.rs  compilation.rs  lib.rs  module.rs  module_environ.rs  obj.rs  stack_map.rs  trap_encoding.rs  tunables.rs  vmoffsets.rs
crates/jit/: Cargo.toml
crates/jit/src/: code_memory.rs  debug.rs  instantiate.rs  lib.rs  link.rs  mmap_vec.rs  profiling.rs  unwind.rs
crates/jit/src/unwind/: theseus.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: debug_builtins.rs  export.rs  externref.rs  instance.rs  jit_int.rs  lib.rs  libcalls.rs  memory.rs  mmap.rs  table.rs  traphandlers.rs  vmcontext.rs
crates/runtime/src/instance/: allocator.rs
crates/runtime/src/instance/allocator/: pooling.rs
crates/runtime/src/instance/allocator/pooling/: theseus.rs
crates/runtime/src/traphandlers/: theseus.rs
crates/test-programs/wasi-tests/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: error.rs  lib.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime/src/: config.rs  engine.rs  externals.rs  func.rs  instance.rs  lib.rs  linker.rs  memory.rs  module.rs  ref.rs  signatures.rs  store.rs  trampoline.rs  trap.rs  types.rs  values.rs
crates/wasmtime/src/func/: typed.rs
crates/wasmtime/src/module/: registry.rs  serialization.rs
crates/wasmtime/src/store/: data.rs
crates/wasmtime/src/trampoline/: func.rs  global.rs  memory.rs  table.rs
crates/wasmtime/src/types/: matching.rs
